# MiniEncoding

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py  test_asciibytes.py  test_tables.py
DOCS/: asciibytes.md  readme.md  tables.md
miniencoding/: __init__.py  asciibytes.py  tables.py
